After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 748964 - oggdemux: fix chain leak
oggdemux: fix chain leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-05-05 16:09 UTC by Guillaume Desmottes
Modified: 2015-05-26 07:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
oggdemux: fix chain leak (876 bytes, patch)
2015-05-05 16:09 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2015-05-05 16:09:14 UTC
.
Comment 1 Guillaume Desmottes 2015-05-05 16:09:32 UTC
Created attachment 302935 [details] [review]
oggdemux: fix chain leak

Don't leak the building_chain when destroying.

Fix leaks with the validate.http.playback.reverse_playback.vorbis_theora_1_ogg
scenario.
Comment 2 Vincent Penquerc'h 2015-05-26 07:31:05 UTC
commit 1c10b58cce02c2db99e38d63b3c855bca22af8a6
Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Date:   Tue May 5 18:01:46 2015 +0200

    oggdemux: fix chain leak
    
    Don't leak the building_chain when destroying.
    
    Fix leaks with the validate.http.playback.reverse_playback.vorbis_theora_1_ogg
    scenario.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=748964